--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -2,6 +2,7 @@
     border: solid 1px #e0e0e0;
     border-radius: 10px;
     padding: 15px;
+    margin-top: 1rem;
 }
 
 .mainContent{
@@ -36,6 +37,9 @@
 
 .extraContent {
     color: #555555;
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .upvoteIcon {
@@ -50,5 +54,37 @@
 }
 
 .moreInfo {
-    
+    margin: 0;
+}
+
+.abreviationContainer {
+    background-color: #f7f7f8;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+}
+
+.abreviation {
+    font-weight: bold;
+    margin: 0;
+}
+
+.messageContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bookmarkIconContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0.5rem;
+}
+
+.messageCount {
+    margin: 0;
 }
